--- a/app/src/main/res/layout/fragment_motorscan.xml
+++ b/app/src/main/res/layout/fragment_motorscan.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <SurfaceView
-        android:id="@+id/mSurfaceView"
+        android:id="@+id/surfaceview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
